# MASQuery

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ablation_report.json  chunker.py  config.py  context_relevance_report.json  docker-compose.yml  embeddings.py  generator.py  ingest.py  main.py  pyproject.toml  requirements-streamlit.txt  requirements.txt  retriever.py  streamlit_app.py  tracer.py
.github/workflows/: ci.yml
docs/: CONFIDENCE_SCORING.md  EXTRACTION_LIMITATIONS.md  REFUSAL_THRESHOLD.md  RETRIEVAL_ABLATION.md  VERIFICATION.md
eval/: EXPANSION_PLAN.md  GOLDEN_QA_COVERAGE.md
evaluation/: __init__.py  evaluator.py  golden_qa.yaml  metrics.py
prompts/: system_prompt.txt
scripts/: download_docs.py  run_ablation.py
tests/: conftest.py  test_api.py  test_chunker.py  test_embeddings.py  test_evaluation.py  test_generator.py  test_ingest.py  test_retriever.py  test_tracer.py
