[project]
name = "masquery"
version = "1.0.0"
description = "RAG-based Q&A for MAS regulatory documents with source tracing"
requires-python = ">=3.11"
authors = [
    { name = "MASQuery Team" },
]
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
